--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,15 @@
+h2 {
+  margin: 20px 0;
+}
+
+p, ul {
+  margin: 0 0 0.2rem;
+}
+
+h3, h4, h5, h6 {
+  margin: 0 0 0.2rem;
+}
+
 .title {
   display: flex;
   justify-content: space-between;
@@ -5,6 +17,10 @@
 
 .avatar {
   height: 4rem;
+}
+
+.skills {
+  padding-left: 40px
 }
 
 @media print {
